# dsa-intro

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  dsa_checker.py  pyproject.toml  requirements.txt
.claude/commands/: compush.md
data_structures/: __init__.py  graph.py  linked_list.py  tree.py
dsa_checker/: __init__.py  checker.py  registry.py  types.py
dsa_checker/test_cases/: __init__.py  topic_01_big_o.py  topic_02_arrays_strings.py  topic_03_hash_tables.py  topic_04_two_pointers.py  topic_05_linked_lists.py  topic_06_stacks_queues.py  topic_07_recursion.py  topic_08_trees.py  topic_09_heaps.py  topic_10_graphs.py  topic_11_dp.py  topic_12_greedy.py  topic_13_tries.py  topic_14_union_find.py  topic_15_intervals.py
notebooks/: 01_big_o_notation.ipynb  02_arrays_and_strings.ipynb  03_hash_tables.ipynb  04_two_pointers_sliding_window.ipynb  05_linked_lists.ipynb  06_stacks_and_queues.ipynb  07_recursion_and_backtracking.ipynb  08_trees.ipynb  09_heaps_and_priority_queues.ipynb  10_graphs.ipynb  11_dynamic_programming.ipynb  12_greedy_algorithms.ipynb  13_tries.ipynb  14_union_find.ipynb  15_intervals_and_sorting.ipynb
tests/: __init__.py  conftest.py  test_01_big_o.py  test_02_arrays_strings.py  test_03_hash_tables.py  test_04_two_pointers.py  test_05_linked_lists.py  test_06_stacks_queues.py  test_07_recursion.py  test_08_trees.py  test_09_heaps.py  test_10_graphs.py  test_11_dp.py  test_12_greedy.py  test_13_tries.py  test_14_union_find.py  test_15_intervals.py
