[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-intro"
version = "1.0.0"
description = "Data Structures & Algorithms learning curriculum with Jupyter notebooks"
requires-python = ">=3.10"
dependencies = [
    "notebook>=7.5.1",
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[tool.setuptools.packages.find]
include = ["dsa_checker*", "data_structures*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["dsa_checker", "data_structures"]